    the module name, like ``sys.argv``.
  - Added new theme ``haiku``, inspired by the Haiku OS user guide.
  - Added new theme ``nature``.
  - Added new theme ``agogo``, created by Andi Albrecht.
  - Added new theme ``scrolls``, created by Armin Ronacher.
  - #193: Added a ``visitedlinkcolor`` theme option to the default
    theme.

* Extension API:

  - Added ``html-collect-pages`` event.
  - Added ``needs_sphinx`` config value and ``Sphinx.require_sphinx``
    application API function.
  - #200: Added ``Sphinx.add_stylesheet()``.

* Extensions:

  - Added the ``viewcode`` extension.
  - Added the ``extlinks`` extension.
  - Added support for source ordering of members in autodoc, with
    ``autodoc_member_order = 'bysource'``.
  - Added ``autodoc_default_flags`` config value, which can be used to
    select default flags for all autodoc directives.
  - Added a way for intersphinx to refer to named labels in other
    projects, and to specify the project you want to link to.
  - #280: Autodoc can now document instance attributes assigned in
    ``__init__`` methods.
  - Many improvements and fixes to the ``autosummary`` extension, thanks
    to Pauli Virtanen.
  - #309: The ``graphviz`` extension can now output SVG instead of PNG
    images, controlled by the ``graphviz_output_format`` config value.
  - Added ``alt`` option to ``graphviz`` extension directives.

* Translations:

  - Added Croatian translation, thanks to Bojan Mihelač.
  - Added Turkish translation, thanks to Firat Ozgul.
  - Added Catalan translation, thanks to Pau Fernández.
  - Added simplified Chinese translation.


Release 0.6.7 (in development)
==============================


Release 0.6.6 (May 25, 2010)
============================

* Handle raw nodes in the ``text`` writer.

* Fix a problem the Qt help project generated by the ``qthelp``
  builder that would lead to no content being displayed in the Qt
  Assistant.

* #393: Fix the usage of Unicode characters in mathematic formulas