@@ -1,2 +1,4 @@
 {# custom sidebar template #}
 <h4>Custom sidebar</h4>
+
+{{ toctree(titles_only=True, maxdepth=1) }}
